--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,7 @@
 /* src/App.css */
+
+@import url("https://fonts.googleapis.com/css2?family=Changa&display=swap");
+
 html,
 body {
   width: 100%;
@@ -46,4 +49,11 @@ body {
   position: absolute;
   width: 100px;
   height: 600px;
+}
+
+.title {
+  font-family: "Changa", sans-serif;
+  font-weight: 200;
+  font-size: 3rem;
+  text-align: center;
 }
