--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,14 +7,30 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: center;
+  background: linear-gradient(
+    180deg,
+    rgb(211, 186, 239) 0%,
+    rgb(120, 45, 218) 50%,
+    rgba(74, 4, 125, 0) 50%,
+    rgba(21, 0, 49, 0) 100%
+  );
+}
+
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
   align-content: center;
 }
 
 .App {
   position: relative;
-  width: 600px;
+  width: 100vw;
   height: 600px;
   border: 1px solid #000;
   overflow: hidden;
