scoreboard renders scoreboard data, displays it as a table, added buttons for test functionality until implemented into game logic

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -116,3 +116,14 @@ body {
   font-size: 3rem;
   text-align: center;
 }
+
+.scoreboard-container {
+  text-align: center;
+  display: flex-start;
+  flex-direction: column;
+}
+
+.scoreboard {
+  display: flex;
+  flex-direction: column;
+}
