--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,21 +2,29 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Changa&display=swap");
 
-html,
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   width: 100%;
-  height: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   align-content: center;
-  background: linear-gradient(
-    180deg,
-    rgb(211, 186, 239) 0%,
-    rgb(120, 45, 218) 50%,
-    rgba(74, 4, 125, 0) 50%,
-    rgba(21, 0, 49, 0) 100%
-  );
+  background: rgba(153, 0, 255, 0.256);
+}
+
+.app-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+  width: 100vw;
+  height: 50px;
 }
 
 .container {
@@ -28,11 +36,27 @@ body {
   align-content: center;
 }
 
+.wallet-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
 .game-container {
   display: flex;
   flex-direction: column;
   margin-top: 40px;
   align-items: center;
+  width: 100%;
+  background: linear-gradient(
+    180deg,
+    rgb(211, 186, 239) 0%,
+    rgb(120, 45, 218) 50%,
+    rgba(74, 4, 125, 0) 50%,
+    rgba(21, 0, 49, 0) 100%
+  );
 }
 
 .button-container {
@@ -62,7 +86,6 @@ body {
   display: flex;
   flex-direction: column;
   margin-top: 20px;
-  height: 100%;
   align-items: center;
 }
 
@@ -145,5 +168,4 @@ body {
   justify-content: center;
   align-items: center;
   align-content: center;
-  height: 100%;
 }
