--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,7 +24,12 @@ body {
   align-items: center;
   align-content: center;
   width: 100vw;
-  height: 50px;
+  height: fit-content;
+  margin-bottom: 2rem;
+  border: solid 1px #eaeaea;
+  padding: 0.5rem;
+  padding-top: 1rem;
+  border-bottom: "1px solid #eaeaea",
 }
 
 .container {
@@ -52,13 +57,6 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  background: linear-gradient(
-    180deg,
-    rgb(211, 186, 239) 0%,
-    rgb(120, 45, 218) 50%,
-    rgba(74, 4, 125, 0) 50%,
-    rgba(21, 0, 49, 0) 100%
-  );
 }
 
 .button-container {
