--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,16 +54,42 @@ body {
 .game-container {
   width: 100%;
   height: 100%;
-  display: flex;
+  display: block;
   flex-direction: column;
   align-items: center;
   width: 100%;
 }
 
+/* Create two unequal columns that floats next to each other */
+.column {
+  float: left;
+  padding: 1px;
+}
+
+.left {
+  width: 30%;
+  height: fit-content;
+  padding-top: 2rem;
+  align-items: center;
+  align-content: center;
+}
+
+.right {
+  width: 70%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .button-container {
-  display: "flex";
-  flex-direction: "row";
+  display: flex;
   justify-content: center;
+  align-content: center;
+  align-items: center;
   /* gap: 20px; */
 }
 
@@ -105,7 +131,7 @@ body {
   padding-bottom: 0.5rem;
   padding-left: 2rem;
   padding-right: 2rem;
-  margin: 1rem;
+  margin: 0.5rem;
   border-radius: 1rem;
   font-size: 1rem;
   border: 2px solid rgb(42, 12, 81);
